# openq-ng.gaim-ipmsg

./: .rsyncrc  CMakeLists.txt  install  ipmsg.c  ipmsg.h  irchelper.c  make  run  snpp.c
